--- a/index.html
+++ b/index.html
@@ -11,23 +11,127 @@
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"
   ></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <head>
     <title>Portfolio</title>
   </head>
   <body>
     <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <img
+            data-aos="zoom-in"
+            data-aos-duration="2200"
+            src="./image/logo2.jpg"
+            style="width: 100%"
+          />
+        </div>
+      </div>
+      <div class="container">
         <div class="row">
-            <div class="col-12">
-                <img src="./image/logo2.jpg" style="width: 100%">
-            </div>
+          <div class="col-12 text-center pb-5">
+            <a href="./portfolio.html" type="button" class="btn btn-success"
+              >ดู Portfolio</a
+            >
+          </div>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <a href="./portfolio.html" type="button" class="btn btn-success">ดู Portfolio</a>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+    <footer class="text-center text-lg-start bg-light text-muted">
+      <section
+        class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+      >
+        <div class="me-5 d-none d-lg-block">
+          <span>ขอบคุณที่เยี่ยมชมผลงานเรา</span>
+        </div>
+        <div>
+          <a href="" class="me-4 text-reset">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="" class="me-4 text-reset">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="" class="me-4 text-reset">
+            <i class="fab fa-google"></i>
+          </a>
+          <a href="" class="me-4 text-reset">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="" class="me-4 text-reset">
+            <i class="fab fa-linkedin"></i>
+          </a>
+          <a href="" class="me-4 text-reset">
+            <i class="fab fa-github"></i>
+          </a>
+        </div>
+      </section>
+      <section class="">
+        <div class="container text-center text-md-start mt-5">
+          <div class="row mt-3">
+            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+              <h6 class="text-uppercase fw-bold mb-4">
+                <i class="fas fa-gem me-3"></i>พรพัฒนศร
+              </h6>
+              <p>
+                จําหน่ายเสื้อ-กางเกงและอุปกรณ์ นักเรียน พร้อมปักชื่อจบในที่เดียว
+              </p>
+            </div>
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+              <h6 class="text-uppercase fw-bold mb-4">Products</h6>
+              <p>
+                <a href="#!" class="text-reset">เสื้อ</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">กางเกง</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">อุปกรณ์</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">ผลงานปักผ้า</a>
+              </p>
+            </div>
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+              <h6 class="text-uppercase fw-bold mb-4">Useful links</h6>
+              <p>
+                <a href="#!" class="text-reset">Pricing</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Settings</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Orders</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Help</a>
+              </p>
+            </div>
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+              <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+              <p>
+                <i class="fas fa-home me-3"></i> บ้านเลขที่ 1 ปากซอยลาดกระบัง 32
+                แขวงลาดกระบัง เขตลาดกระบัง กรุงเทพ 10520
+              </p>
+              <p>
+                <i class="fas fa-envelope me-3"></i>
+                info@example.com
+              </p>
+              <p><i class="fas fa-phone me-3"></i>โทร. คุณพร 081-850-0697</p>
+              <p><i class="fas fa-print me-3"></i>โทร. คุณจิตร 081-847-7340</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div
+        class="text-center p-4"
+        style="background-color: rgba(0, 0, 0, 0.05)"
+      >
+        © 2023 Copyright
+      </div>
+    </footer>
   </body>
+  <script>
+    AOS.init();
+  </script>
 </html>
