--- a/portfolio.html
+++ b/portfolio.html
@@ -11,20 +11,24 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
-{% comment %}  {% endcomment %}
-<body style="background-color : #90EE90">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+<body
+    style="background-image: url(./image/wallpaper4.jpg) ; background-repeat: no-repeat; background-attachment: fixed;">
     <div class="container pt-5">
         <div class="row">
             <div class="col-12 text-center">
-                <div style="border: 1px solid white; padding : 2%; margin-left : 30%; margin-right : 30%; background-color : white; border-radius : 50%">
-                    <h1 style="color : #00FF7F">ดูผลงานของเราก่อนสิ</h1>
+                <div data-aos="zoom-in" data-aos-duration="3000"
+                    style="border: 1px solid white; padding : 2%; margin-left : 30%; margin-right : 30%; background-color : white; border-radius : 50%">
+                    <h1>ดูผลงานของเราก่อนสิ</h1>
                 </div>
             </div>
         </div>
-        <div class="row pt-5">
+        <div class="row pt-5 pb-5">
             <hr>
             <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center pt-4">
-                <div class="card" style="width: 100%">
+                <div data-aos="flip-left" data-aos-duration="3000" class="card" style="width: 100%">
                     <img src="./image/design/IMG_0038.JPG" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Blue Alcohol Team</h5>
@@ -34,7 +38,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center pt-4">
-                <div class="card" style="width: 100%;">
+                <div data-aos="flip-right" data-aos-duration="3000" class="card" style="width: 100%;">
                     <img src="./image/design/IMG_0039.JPG" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">MCN ร้านตัดผมตามสั่ง</h5>
@@ -44,7 +48,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center pt-4">
-                <div class="card" style="width: 100%;">
+                <div data-aos="flip-left" data-aos-duration="3000" class="card" style="width: 100%;">
                     <img src="./image/design/IMG_0041.JPG" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">หน่วยอาสาบรรเทาภัย</h5>
@@ -54,7 +58,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center pt-4">
-                <div class="card" style="width: 100%;">
+                <div data-aos="flip-right" data-aos-duration="2000" class="card" style="width: 100%;">
                     <img src="./image/design/IMG_0045.JPG" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">ศูนย์วิทยุนภาสยาม</h5>
@@ -64,7 +68,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center pt-4">
-                <div class="card" style="width: 100%;">
+                <div data-aos="flip-left" data-aos-duration="2000" class="card" style="width: 100%;">
                     <img src="./image/design/IMG_0049.JPG" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">ศูนย์วิทยุร่วมด้วยช่วยกัน</h5>
@@ -74,7 +78,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center pt-4">
-                <div class="card" style="width: 100%;">
+                <div data-aos="flip-right" data-aos-duration="2000" class="card" style="width: 100%;">
                     <img src="./image/design/IMG_0054.JPG" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">เจ๊น้อย ก๋วยเตี่ยวเรืออยุธยา</h5>
@@ -84,7 +88,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center pt-4">
-                <div class="card" style="width: 100%;">
+                <div data-aos="flip-left" data-aos-duration="2000" class="card" style="width: 100%;">
                     <img src="./image/design/IMG_0051.JPG" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">ร่วมกตัญญู</h5>
@@ -94,7 +98,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center pt-4">
-                <div class="card" style="width: 100%;">
+                <div data-aos="flip-right" data-aos-duration="2000" class="card" style="width: 100%;">
                     <img src="./image/design/IMG_0060.JPG" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">หมูปิ้งจ่าเข้ม</h5>
@@ -104,7 +108,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center pt-4">
-                <div class="card" style="width: 100%;">
+                <div data-aos="flip-left" data-aos-duration="2000" class="card" style="width: 100%;">
                     <img src="./image/design/IMG_0064.JPG" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">ทีมงาน อั๋น อสมท</h5>
@@ -115,6 +119,98 @@
             </div>
         </div>
     </div>
+    <footer class="text-center text-lg-start bg-light text-muted">
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+            <div class="me-5 d-none d-lg-block">
+                <span>ขอบคุณที่เยี่ยมชมผลงานเรา</span>
+            </div>
+            <div>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-google"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
+        </section>
+        <section class="">
+            <div class="container text-center text-md-start mt-5">
+                <div class="row mt-3">
+                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            <i class="fas fa-gem me-3"></i>พรพัฒนศร
+                        </h6>
+                        <p>
+                            จําหน่ายเสื้อ-กางเกงและอุปกรณ์ นักเรียน พร้อมปักชื่อจบในที่เดียว
+                        </p>
+                    </div>
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            Products
+                        </h6>
+                        <p>
+                            <a href="#!" class="text-reset">เสื้อ</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">กางเกง</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">อุปกรณ์</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">ผลงานปักผ้า</a>
+                        </p>
+                    </div>
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            Useful links
+                        </h6>
+                        <p>
+                            <a href="#!" class="text-reset">Pricing</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Settings</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Orders</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Help</a>
+                        </p>
+                    </div>
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+                        <p><i class="fas fa-home me-3"></i> บ้านเลขที่ 1 ปากซอยลาดกระบัง 32 แขวงลาดกระบัง เขตลาดกระบัง
+                            กรุงเทพ 10520</p>
+                        <p>
+                            <i class="fas fa-envelope me-3"></i>
+                            info@example.com
+                        </p>
+                        <p><i class="fas fa-phone me-3"></i>โทร. คุณพร 081-850-0697</p>
+                        <p><i class="fas fa-print me-3"></i>โทร. คุณจิตร 081-847-7340</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+            © 2023 Copyright
+        </div>
+    </footer>
 </body>
+<script>
+    AOS.init();
+</script>
 
 </html>
